<resources>
    <string name="app_name">Where to Watch</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_favorites">Favorites</string>
    <string name="title_search">Search</string>
    <string name="Filter">Filter</string>
    <string name="media_title">Media Title</string>
    <string name="availableOn">Available On:</string>
    <string name="add_to_favorites">Add to favorites</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="no_results">No Results</string>
    <string name="no_results_body">No results found for that search result. Please try another search term.</string>
    <string name="okay_button">Okay</string>
    <string name="welcome_message">Welcome! Search for a show or movie!</string>

</resources>
