<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.AlertDialogLayout android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
                                             xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto">

<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    android:layout_height="wrap_content"
                                    android:layout_width="280dp" app:cardElevation="24dp"
                                    app:cardCornerRadius="16dp">
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark">

        <TextView
                android:text="@string/no_results"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/tv_noResultsCaption"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintRight_toRightOf="parent"
                android:layout_marginTop="19dp" app:layout_constraintTop_toTopOf="parent"
                android:textColor="@color/appBarText" android:typeface="sans" android:textStyle="bold"
                android:textSize="21sp" android:fontFamily="@font/work_sans_bold"/>
        <TextView
                android:text="@string/no_results_body"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/tv_noResults"
                android:textColor="@color/appBarText" android:textSize="18sp" android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_noResultsCaption"
                app:layout_constraintStart_toStartOf="@+id/tv_noResultsCaption"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                android:fontFamily="@font/work_sans"/>
        <TextView
                android:text="@string/okay_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/action_okay" android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_noResults" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp" android:textColor="@color/colorNav" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:textSize="18sp" android:textAlignment="center"
                android:typeface="sans" android:fontFamily="@font/work_sans_semibold" android:textStyle="bold"/>
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>

</android.support.v7.widget.AlertDialogLayout>