<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
                                    xmlns:app="http://schemas.android.com/apk/res-auto"
                                    xmlns:tools="http://schemas.android.com/tools"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:elevation="8dp"
                                    android:minHeight="200dp"

                                    app:cardCornerRadius="8dp"
                                    app:cardElevation="8dp"
                                    app:cardPreventCornerOverlap="false"
                                    app:cardUseCompatPadding="true">


    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="8dp">

        <ImageView
                android:id="@+id/iv_media_pic"
                android:layout_width="match_parent"
                android:layout_height="194dp"
                android:scaleType="centerCrop"
                android:adjustViewBounds="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                android:contentDescription="@string/media_title"/>

        <TextView
                android:id="@+id/tv_media_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginStart="8dp"
                android:textColor="@android:color/white"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="@+id/iv_media_pic"
                app:layout_constraintStart_toStartOf="parent"
                tools:text="Placeholder"/>

        <TextView
                android:id="@+id/tv_available_on"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:layout_marginStart="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_media_pic"
                android:text="@string/availableOn"
                style="@style/Base.TextAppearance.AppCompat.Caption"
                android:visibility="gone"
                tools:visibility="visible"

        />
        <LinearLayout
                android:id="@+id/linearlayout_locations"
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="@dimen/image_view_max_height"
                android:layout_marginStart="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_available_on"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginTop="24dp"
                android:visibility="gone"
                android:gravity="center"
                tools:visibility="visible"
        >
        </LinearLayout>
        <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" app:srcCompat="@drawable/ic_baseline_favorite_border_24px"
                android:id="@+id/iv_favorite" app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginTop="24dp" app:layout_constraintTop_toBottomOf="@+id/iv_media_pic"
                android:visibility="gone"
                tools:visibility="visible"
                android:contentDescription="@string/add_to_favorites"
        />
    </android.support.constraint.ConstraintLayout>
</android.support.v7.widget.CardView>